# blind-base-cli

./: .gitignore  README.md  blindbase.py  pyproject.toml  requirements.txt  settings.json  test.pgn
.github/workflows/: build.yml  release.yml
blindbase/: __init__.py  analysis.py  app.py  broadcast.py  cli.py  settings.py
blindbase.egg-info/: PKG-INFO  SOURCES.txt
blindbase/ui/: board.py
packaging/: build_arm_local.sh  build_mac_universal.sh  build_macos.py  build_windows.py
